final commit for night

--- a/HardestRoute/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HardestRoute/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -192,7 +192,9 @@ LastLevel=/Game/Liam_Enemy/LiamTestLevel
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Liam_Enemy/EnemyHealer_BP.EnemyHealer_BP
 OpenAssetsAtExit=/Game/Liam_Enemy/Enemy_BP.Enemy_BP
+OpenAssetsAtExit=/Game/Liam_Enemy/EnemyBruteAnim_BP.EnemyBruteAnim_BP
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1159,8 +1161,8 @@ Room_BP_C=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Colli
 PlayerStart=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
 CapsuleComponent=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
 BoxComponent=BoxComponent.Collision.Collision,CameraComponent.TransformCommon.Transform,
-K2Node_VariableSet=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
-K2Node_VariableGet=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
+K2Node_VariableSet=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Mesh,
+K2Node_VariableGet=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Mesh,
 BP_TopDownCharacter_C=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
 PropertyWrapper=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
 StaticMeshActor=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
@@ -1173,11 +1175,12 @@ BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Tra
 MainMenu-Widget_C=CameraComponent.TransformCommon.Transform,
 Actor=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
 K2Node_CallFunction=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
-EnemyHealer_BP_C=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
+EnemyHealer_BP_C=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Mesh,
 K2Node_Variable=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
 SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,
-EnemyBruteAnim_BP_C=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
+EnemyBruteAnim_BP_C=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Mesh,
 AnimStateNode=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
+EnemyHealerAnim_BP_C=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Mesh,
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -2274,28 +2277,32 @@ EnemyBruteAnim_BP_C.Default=True
 K2Node_FunctionResult.Graph=True
 K2Node_FunctionResult.Inputs=True
 K2Node_FunctionResult.Outputs=True
+EnemyHealer_BP_C.Materials=True
+EnemyHealerAnim_BP_C.RootMotion=True
+EnemyHealerAnim_BP_C.Notifies=True
+EnemyHealerAnim_BP_C.Montage=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDown/Blueprints/BP_TopDownCharacter
-MRUItem1=/Game/Liam_Enemy/EnemyHealer_BP
+MRUItem0=/Game/Liam_Enemy/EnemyBruteAnim_BP
+MRUItem1=/Game/Liam_Enemy/EnemyHealerAnim_BP
 MRUItem2=/Game/Liam_Enemy/Enemy_BP
-MRUItem3=/Game/Liam_Enemy/LiamTestLevel
-MRUItem4=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_orcbrute_passout
-MRUItem5=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_orcbrute__headbutt
-MRUItem6=/Game/Liam_Enemy/EnemyBruteAnim_BP
-MRUItem7=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_orcbrute_walk
-MRUItem8=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_Player_characterCleanedAction
-MRUItem9=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_orcbrute_passout_001
-MRUItem10=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_PhysicsAsset
-MRUItem11=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_walk
-MRUItem12=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh
-MRUItem13=/Game/Liam_Enemy/EnemyModel/Brute/orcbrute_mesh
-MRUItem14=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Skeleton
-MRUItem15=/Game/Liam_Enemy/BruteAnim_BP
-MRUItem16=/Game/Liam_Enemy/Enemy_Controller
-MRUItem17=/Game/Liam_Enemy/TaskChasePlayer
-MRUItem18=/Game/Liam_Enemy/Enemy_Behaviour
-MRUItem19=/Game/Liam_Enemy/EnemyModel/Healer/orcmedic_mesh
+MRUItem3=/Game/Liam_Enemy/EnemyHealer_BP
+MRUItem4=/Game/Liam_Enemy/EnemyModel/Healer/orcmedic_mesh
+MRUItem5=/Game/Liam_Enemy/EnemyModel/Healer/orcmedicANIM_mesh
+MRUItem6=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem7=/Game/Liam_Enemy/LiamTestLevel
+MRUItem8=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_orcbrute_passout
+MRUItem9=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_orcbrute__headbutt
+MRUItem10=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_orcbrute_walk
+MRUItem11=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_Player_characterCleanedAction
+MRUItem12=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_orcbrute_passout_001
+MRUItem13=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_PhysicsAsset
+MRUItem14=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_walk
+MRUItem15=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh
+MRUItem16=/Game/Liam_Enemy/EnemyModel/Brute/orcbrute_mesh
+MRUItem17=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Skeleton
+MRUItem18=/Game/Liam_Enemy/BruteAnim_BP
+MRUItem19=/Game/Liam_Enemy/Enemy_Controller
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
@@ -2351,6 +2358,7 @@ EditorStyleSettings=True
 /Game/Liam_Enemy/Enemy_Blackboard.Enemy_Blackboard=0
 /Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh.orcbruteANIM_mesh=0
 /Game/Liam_Enemy/EnemyBruteAnim_BP.EnemyBruteAnim_BP=0
+/Game/Liam_Enemy/EnemyModel/Healer/orcmedicANIM_mesh.orcmedicANIM_mesh=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2403,12 +2411,12 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-StaticMeshComponent="\"Object.Rendering.OverrideMaterials\" "
+StaticMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
-BoxComponent=
+BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent=
 BlackboardData="\"Object.Blackboard\" "
 DataAsset="\"Object.SkeletalMeshes\" "
@@ -2425,14 +2433,14 @@ AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
 EdGraphNode=
 SkeletalMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkinnedMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-EnemyHealer_BP_C=
+EnemyHealer_BP_C="\"Object.Mesh\" \"Object.Mesh.Object.AnimationData\" "
 Character=
 Pawn=
 Enemy_BP_C=
 CapsuleComponent=
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
